AgentToolNode解析messages